--- a/card.html
+++ b/card.html
@@ -3,7 +3,8 @@
 	<div itemscope itemtype="http://schema.org/Person">
 	<span itemprop="name">Tomasz Anwailer</span>
 	<span itemprop="jobTitle">Student</span>
-<a href="http://v-ie.uek.krakow.pl/~s192115" itemprop="url">http://v-ie.uek.krakow.pl/~s192115</a>
-</div>
-</body>
+	<a href="http://v-ie.uek.krakow.pl/~s192115" itemprop="url">http://v-ie.uek.krakow.pl/~s192115</a>
+	</div>
+	tesst
+	</body>
 </html>
