dopisanie jakies lata

--- a/card.html
+++ b/card.html
@@ -4,7 +4,10 @@
 	<span itemprop="name">Tomasz Anwailer</span>
 	<span itemprop="jobTitle">Student</span>
 	<a href="http://v-ie.uek.krakow.pl/~s192115" itemprop="url">http://v-ie.uek.krakow.pl/~s192115</a>
-	<img src="http://www.qygjxz.com/data/out/179/5793047-picture.jpg" alt="text" style="width:100;height:100;">
+	<img src="https://image.freepik.com/free-photo/cute-cat-picture_1122-449.jpg" style="width:100;height:100;">
 	</div>
+  <ul>
+	<li>2008-2012<li>
+</ul>
 	</body>
 </html>
