--- a/card.html
+++ b/card.html
@@ -7,7 +7,8 @@
 	<img src="https://image.freepik.com/free-photo/cute-cat-picture_1122-449.jpg" style="width:100;height:100;">
 	</div>
   <ul>
-	<li>2008-2012<li>
+	<li>czemu brakuje dzemu</li>
+	<li>2008-2012/<li>
 </ul>
 	</body>
 </html>
